--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background:url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background:url(http://wallpapercave.com/wp/91kBjCj.jpg) bottom center;
   background-size: cover;
 }
 body,html {
